package seedu.healthbud.exception;

public class HealthBudException extends Exception{
    public HealthBudException(String message) {
        super(message);
    }
}
